--- a/assets/css/style-general.scss
+++ b/assets/css/style-general.scss
@@ -1,10 +1,97 @@
 @import 'bootstrap/bootstrap';
+/*FONT FAMILY*/
+@font-face {
+    font-family: 'supermolotregular';
+    src: url('../fonts/supermolot-webfont.woff2') format('woff2'),
+         url('../fonts/supermolot-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'supermolotbold_italic';
+    src: url('../fonts/supermolot_bold_italic-webfont.woff2') format('woff2'),
+         url('../fonts/supermolot_bold_italic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
+@font-face {
+    font-family: 'supermolotlight';
+    src: url('../fonts/supermolot_light-webfont.woff2') format('woff2'),
+         url('../fonts/supermolot_light-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+// COLORS
 $white: #fff;
 $color-primary: #302b6c;
+$grey-medium: #434244;
+$grey-light: #e1e1e1;
+
+// FONT
+$font-light: 'supermolotlight';
+$font-regular: 'supermolotregular';
+$font-italic: 'supermolotitalic';
+$font-bold-italic: 'supermolotbold_italic';
+
+
+
+h1{
+	font-family: $font-bold-italic;
+	font-size: 50px;
+	color: $grey-light;
+	text-transform: uppercase;
+	letter-spacing: 5px;
+}
+p.lead {
+	font-family: $font-light;
+	font-size: 23px;
+	text-transform: uppercase;
+	color: $grey-medium;
+	letter-spacing: 3px;
+}
+
+.title-group {
+	text-align: center;
+	padding: 50px 0; 
+}
+
+// BUTTONS
+.btn {
+	border-radius: 3px;
+	font-family: $font-regular;
+}
+.btn-cta {
+	background: $color-primary;
+	color: $white;
+	border: 2px solid $color-primary;
+	letter-spacing: 0.5px;
+	&:hover {
+	background: $white;
+	color: $color-primary;
+	}
+}
+.btn-inverse {
+	background: $white;
+	color: $color-primary;
+	border: 2px solid $white;
+	&:hover {
+		background: none;
+		color: $white;
+	}
+}
+// MISC
+$shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15);
 
 .sub-header {
 	background: $white;
+	height: 45px;
+	width: 100%;
+}
+.logo-crb-header {
+	width: 95px;
 }
 .main-header {
 	background: $color-primary;
@@ -21,4 +108,137 @@ $color-primary: #302b6c;
 		}
 	}
 
+}
+// NAVBAR
+.nav-header {
+	margin-top: 20px;
+	ul {
+		li {
+			font-size: 16px;
+			font-family: $font-regular;
+			letter-spacing: 0.5px;
+			a {
+				text-decoration: none;
+			}
+		}
+	}
+}
+
+// HEROS
+.hero-home {
+	width: 100%;
+	height: 763px;
+	background: $color-primary url("../img/hero-home.jpg");
+	background-size: cover;
+
+}
+
+// FEATURES
+.feat-group {
+}
+
+.feature {
+	width: 240px;
+	height: 120px;
+	padding: 0 25px;
+	border-radius: 5px;
+	box-shadow: $shadow;
+
+	font-family: $font-light;
+	font-size: 22px;
+	letter-spacing: 0.5px;
+	color: $grey-medium;
+
+	text-align: center;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
+
+// MIDIA
+.midia {
+	margin: 50px 0;
+}
+.midia-text {
+	font-family: $font-regular;
+	font-size: 16px;
+	margin: 30px 0;
+}
+#youtubecover {
+	&:hover {
+		cursor: pointer;
+	}
+}
+
+// CARDS 
+
+.card-block {
+	width: 100%;
+	max-width: 404px;
+	height: 473px;
+	border-radius: 8px 8px 0 0;
+	background-repeat: no-repeat;
+	padding: 25px;
+
+}
+.card-apto { background: url("../img/b-home-apartamentos.jpg")}
+.card-lazer { background: url("../img/b-home-lazer.jpg")}
+.card-localizacao { background: url("../img/b-home-localizacao.jpg")}
+
+.card-title {
+	font-family: $font-bold-italic;
+	color: $white;
+	font-size: 25px;
+	text-transform: uppercase;
+	letter-spacing: 0.8px;
+}
+.card-info {
+	bottom: 30px;
+	position: absolute; 
+}
+.card-color {
+	width: 100%;
+	height: 10px;
+	display: inherit;
+background: -moz-linear-gradient(45deg, rgb(48,43,108) 0%, rgb(83,227,175) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(45deg, rgb(48,43,108) 0%,rgb(83,227,175) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(45deg, rgb(48,43,108) 0%,rgb(83,227,175) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', endColorstr='#53e3af',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+
+// DEPOIMENTO
+.testimonial {
+	background: $color-primary;
+	padding: 50px 0;
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
+.testimonial-text {
+	font-family: $font-regular;
+	font-size: 18px;
+	line-height: 30px;
+	color: $white;
+}
+
+// CTA STAND
+
+.cta-stand {
+	width: 100%;
+	max-width: 1000px;
+	border-radius: 5px;
+	overflow: hidden;
+	box-shadow: $shadow;
+	display:flex;justify-content:center;align-items:center;
+}
+.stand-text {
+	width: 300px;
+	height: 200px;
+	margin-left: 50px;
+}
+.cta-stand-title {
+	font-family: $font-light;
+	font-size: 30px;
+	color: $color-primary;
+	text-transform: uppercase;
+	letter-spacing: 2px;
 }
