--- a/assets/css/style-general.scss
+++ b/assets/css/style-general.scss
@@ -27,6 +27,7 @@
 // COLORS
 $white: #fff;
 $color-primary: #302b6c;
+$color-secundary: #53e3af;
 $grey-medium: #434244;
 $grey-light: #e1e1e1;
 
@@ -36,14 +37,23 @@ $font-regular: 'supermolotregular';
 $font-italic: 'supermolotitalic';
 $font-bold-italic: 'supermolotbold_italic';
 
-
-
 h1{
 	font-family: $font-bold-italic;
 	font-size: 50px;
 	color: $grey-light;
 	text-transform: uppercase;
 	letter-spacing: 5px;
+}
+h2 {
+	font-family: $font-light;
+	font-size: 35px;
+	text-transform: uppercase;
+	letter-spacing: 3.5px;
+	color: $grey-medium;
+}
+
+p {
+	font-family: $font-regular;
 }
 p.lead {
 	font-family: $font-light;
@@ -52,10 +62,55 @@ p.lead {
 	color: $grey-medium;
 	letter-spacing: 3px;
 }
+ul > li {
+	font-family: $font-regular;
+	font-size: 16px;
+}
 
 .title-group {
 	text-align: center;
 	padding: 50px 0; 
+}
+
+.external-link {
+	font-family: $font-regular;
+	color: $grey-medium;
+	text-decoration: none;
+	border-bottom: 1px solid $grey-medium;
+	padding-bottom: 5px;
+	&:hover {
+		text-decoration: none;
+		color: $grey-medium;
+	}
+}
+
+.line {
+	width: 100px;
+	height: 1px;
+	background: $grey-medium;
+	display: inline-block;
+    margin: 0 0 20px 0;
+}
+.line-full {
+	width: 100%;
+}
+.line-green {
+	background: $color-secundary;
+}
+.line-blue {
+	background: $color-primary;
+}
+.line-mr-bottom {
+	margin-bottom: 50px;
+}
+.bar-color {
+	width: 100%;
+	height: 10px;
+	display: inherit;
+background: -moz-linear-gradient(45deg, rgb(48,43,108) 0%, rgb(83,227,175) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(45deg, rgb(48,43,108) 0%,rgb(83,227,175) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(45deg, rgb(48,43,108) 0%,rgb(83,227,175) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', endColorstr='#53e3af',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
 
 // BUTTONS
@@ -82,8 +137,16 @@ p.lead {
 		color: $white;
 	}
 }
+
 // MISC
 $shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15);
+
+.blue-line {
+	width: 100%;
+	height: 1px;
+	background: $color-primary;
+	margin-bottom: 50px;
+}
 
 .sub-header {
 	background: $white;
@@ -134,15 +197,14 @@ $shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15);
 }
 
 // FEATURES
-.feat-group {
-}
-
 .feature {
 	width: 240px;
 	height: 120px;
 	padding: 0 25px;
 	border-radius: 5px;
 	box-shadow: $shadow;
+
+	margin-bottom: 25px;
 
 	font-family: $font-light;
 	font-size: 22px;
@@ -158,6 +220,12 @@ $shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15);
 // MIDIA
 .midia {
 	margin: 50px 0;
+}
+.midia-player {
+	box-shadow: $shadow;
+}
+#ytplayer {
+    margin-bottom: -6px;
 }
 .midia-text {
 	font-family: $font-regular;
@@ -196,15 +264,7 @@ $shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15);
 	bottom: 30px;
 	position: absolute; 
 }
-.card-color {
-	width: 100%;
-	height: 10px;
-	display: inherit;
-background: -moz-linear-gradient(45deg, rgb(48,43,108) 0%, rgb(83,227,175) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(45deg, rgb(48,43,108) 0%,rgb(83,227,175) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(45deg, rgb(48,43,108) 0%,rgb(83,227,175) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', endColorstr='#53e3af',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-}
+
 
 // DEPOIMENTO
 .testimonial {
@@ -241,4 +301,43 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', end
 	color: $color-primary;
 	text-transform: uppercase;
 	letter-spacing: 2px;
+}
+
+// FOOTER 
+.footer {
+padding: 80px 0;
+}
+
+.nav-footer {
+	li {
+		list-style-type: none;
+		margin-bottom: 20px;
+		:before {
+	    content: "";
+	    position: relative;
+	    top: 26px;
+	    left: 1px;
+	    width: 30px;
+	    height: 1px;
+	    display: block;
+	    background: #53e3af;
+		}
+		a {
+			color: $grey-medium;
+			text-decoration: none;
+		}
+
+		
+	}
+}
+.logo-crb-footer {
+	margin-bottom: 20px;
+}
+
+// MEMORIAL
+.memorial {
+	width: 100%;
+	padding: 20px 100px;
+	background: #f5f5f5;
+	font-size: 14px;
 }
