--- a/assets/css/empreendimento.scss
+++ b/assets/css/empreendimento.scss
@@ -1,5 +1,10 @@
 @import "style-general.scss";
 
+.fachada-noturna {
+	width: 100%;
+	max-width: 909px;
+	margin-bottom: 50px;
+}
 .implantacao {
 	max-width: 1120px;
 	width: 100%;
@@ -25,10 +30,13 @@
 .img-inspiracao {
 	margin-bottom: 20px;
 }
-
 .ficha-tecnica {
 	background: $color-primary;
 	color: $white;
 	padding: 50px 0;
+	margin-top: 50px;
 	margin-bottom: 50px;
+}
+.text-equipe {
+	margin: 50px 0;
 }
