--- a/assets/css/style-apartamentos.css
+++ b/assets/css/style-apartamentos.css
@@ -499,12 +499,12 @@ pre {
   @media (min-width: 768px) {
     .container {
       max-width: 720px; } }
-  @media (min-width: 992px) {
+  @media (min-width: 1366px) {
     .container {
       max-width: 960px; } }
-  @media (min-width: 1200px) {
+  @media (min-width: 1600px) {
     .container {
-      max-width: 1140px; } }
+      max-width: 1200px; } }
 
 .container-fluid {
   width: 100%;
@@ -1019,7 +1019,7 @@ pre {
     -ms-flex-order: 12;
     order: 12; } }
 
-@media (min-width: 992px) {
+@media (min-width: 1366px) {
   .col-lg {
     -webkit-flex-basis: 0;
     -ms-flex-preferred-size: 0;
@@ -1169,7 +1169,7 @@ pre {
     -ms-flex-order: 12;
     order: 12; } }
 
-@media (min-width: 1200px) {
+@media (min-width: 1600px) {
   .col-xl {
     -webkit-flex-basis: 0;
     -ms-flex-preferred-size: 0;
@@ -1477,7 +1477,7 @@ pre {
   .table-inverse.table-hover tbody tr:hover {
     background-color: rgba(255, 255, 255, 0.075); }
 
-@media (max-width: 991px) {
+@media (max-width: 1365px) {
   .table-responsive {
     display: block;
     width: 100%;
@@ -3060,13 +3060,13 @@ tbody.collapse.show {
     .navbar-expand-md .navbar-toggler {
       display: none; } }
 
-@media (max-width: 991px) {
+@media (max-width: 1365px) {
   .navbar-expand-lg > .container,
   .navbar-expand-lg > .container-fluid {
     padding-right: 0;
     padding-left: 0; } }
 
-@media (min-width: 992px) {
+@media (min-width: 1366px) {
   .navbar-expand-lg {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -3107,13 +3107,13 @@ tbody.collapse.show {
     .navbar-expand-lg .navbar-toggler {
       display: none; } }
 
-@media (max-width: 1199px) {
+@media (max-width: 1599px) {
   .navbar-expand-xl > .container,
   .navbar-expand-xl > .container-fluid {
     padding-right: 0;
     padding-left: 0; } }
 
-@media (min-width: 1200px) {
+@media (min-width: 1600px) {
   .navbar-expand-xl {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -4134,7 +4134,7 @@ button.close {
   .modal-sm {
     max-width: 300px; } }
 
-@media (min-width: 992px) {
+@media (min-width: 1366px) {
   .modal-lg {
     max-width: 800px; } }
 
@@ -4748,7 +4748,7 @@ a.bg-dark:focus, a.bg-dark:hover {
     display: -ms-inline-flexbox !important;
     display: inline-flex !important; } }
 
-@media (min-width: 992px) {
+@media (min-width: 1366px) {
   .d-lg-none {
     display: none !important; }
   .d-lg-inline {
@@ -4772,7 +4772,7 @@ a.bg-dark:focus, a.bg-dark:hover {
     display: -ms-inline-flexbox !important;
     display: inline-flex !important; } }
 
-@media (min-width: 1200px) {
+@media (min-width: 1600px) {
   .d-xl-none {
     display: none !important; }
   .d-xl-inline {
@@ -5284,7 +5284,7 @@ a.bg-dark:focus, a.bg-dark:hover {
     -ms-flex-item-align: stretch !important;
     align-self: stretch !important; } }
 
-@media (min-width: 992px) {
+@media (min-width: 1366px) {
   .flex-lg-row {
     -webkit-box-orient: horizontal !important;
     -webkit-box-direction: normal !important;
@@ -5419,7 +5419,7 @@ a.bg-dark:focus, a.bg-dark:hover {
     -ms-flex-item-align: stretch !important;
     align-self: stretch !important; } }
 
-@media (min-width: 1200px) {
+@media (min-width: 1600px) {
   .flex-xl-row {
     -webkit-box-orient: horizontal !important;
     -webkit-box-direction: normal !important;
@@ -5579,7 +5579,7 @@ a.bg-dark:focus, a.bg-dark:hover {
   .float-md-none {
     float: none !important; } }
 
-@media (min-width: 992px) {
+@media (min-width: 1366px) {
   .float-lg-left {
     float: left !important; }
   .float-lg-right {
@@ -5587,7 +5587,7 @@ a.bg-dark:focus, a.bg-dark:hover {
   .float-lg-none {
     float: none !important; } }
 
-@media (min-width: 1200px) {
+@media (min-width: 1600px) {
   .float-xl-left {
     float: left !important; }
   .float-xl-right {
@@ -6387,7 +6387,7 @@ a.bg-dark:focus, a.bg-dark:hover {
     margin-top: auto !important;
     margin-bottom: auto !important; } }
 
-@media (min-width: 992px) {
+@media (min-width: 1366px) {
   .m-lg-0 {
     margin: 0 !important; }
   .mt-lg-0 {
@@ -6597,7 +6597,7 @@ a.bg-dark:focus, a.bg-dark:hover {
     margin-top: auto !important;
     margin-bottom: auto !important; } }
 
-@media (min-width: 1200px) {
+@media (min-width: 1600px) {
   .m-xl-0 {
     margin: 0 !important; }
   .mt-xl-0 {
@@ -6844,7 +6844,7 @@ a.bg-dark:focus, a.bg-dark:hover {
   .text-md-center {
     text-align: center !important; } }
 
-@media (min-width: 992px) {
+@media (min-width: 1366px) {
   .text-lg-left {
     text-align: left !important; }
   .text-lg-right {
@@ -6852,7 +6852,7 @@ a.bg-dark:focus, a.bg-dark:hover {
   .text-lg-center {
     text-align: center !important; } }
 
-@media (min-width: 1200px) {
+@media (min-width: 1600px) {
   .text-xl-left {
     text-align: left !important; }
   .text-xl-right {
@@ -7259,3 +7259,73 @@ ul > li {
 
 .paulo-nome {
   font-family: "supermolotbold_italic"; }
+
+.plantas-small {
+  margin-bottom: 50px; }
+
+.card-planta {
+  max-width: 1250px;
+  width: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-align-content: start;
+  -ms-flex-line-pack: start;
+  align-content: start;
+  -webkit-box-shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15);
+  box-shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15);
+  border-radius: 5px;
+  overflow: hidden;
+  margin: 50px 0; }
+
+.card-planta-body {
+  padding: 0px 30px; }
+
+.card-planta-info {
+  margin: auto; }
+
+.card-planta-title {
+  font-size: 30px;
+  font-family: "supermolotbold_italic";
+  color: #434244;
+  letter-spacing: 0.5px; }
+
+.card-planta-lead {
+  font-family: "supermolotlight";
+  font-size: 18px;
+  color: #434244;
+  letter-spacing: 0.5px;
+  margin-top: -18px; }
+
+.card-planta-feature {
+  font-size: 22px;
+  font-family: "supermolotbold_italic";
+  color: #434244;
+  -webkit-box-shadow: inset 0px -10px 0px #52dfae;
+  box-shadow: inset 0px -10px 0px #52dfae;
+  margin-bottom: 20px; }
+
+.card-small-title {
+  color: #fff;
+  font-size: 27px;
+  font-family: "supermolotlight";
+  letter-spacing: 0.5px;
+  position: absolute;
+  top: 65px;
+  margin-left: 30px; }
+
+.card-small-title-number {
+  font-size: 80px; }
+
+.card-planta-list {
+  font-size: 20px;
+  list-style-type: none;
+  padding: 0;
+  margin: 20px 0 30px 0; }
+  .card-planta-list > li {
+    margin-bottom: 15px; }
