--- a/assets/css/style-apartamentos.css
+++ b/assets/css/style-apartamentos.css
@@ -6981,12 +6981,21 @@ h2, .h2 {
 p {
   font-family: "supermolotregular"; }
 
+ul > li {
+  list-style-type: none; }
+
 p.lead {
   font-family: "supermolotlight";
   font-size: 23px;
   text-transform: uppercase;
   color: #434244;
   letter-spacing: 3px; }
+
+p.text-spot {
+  font-family: "supermolotlight";
+  font-size: 20px;
+  color: #434244;
+  letter-spacing: 0.5px; }
 
 ul > li {
   font-family: "supermolotregular";
@@ -6995,6 +7004,15 @@ ul > li {
 .title-group {
   text-align: center;
   padding: 50px 0; }
+
+.ficha-title {
+  color: #fff; }
+
+.ficha-list {
+  padding: 0;
+  margin-top: 30px; }
+  .ficha-list li {
+    margin-bottom: 15px; }
 
 .external-link {
   font-family: "supermolotregular";
@@ -7124,6 +7142,13 @@ ul > li {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center; }
+
+.ficha-tecnica {
+  background: #302b6c;
+  color: #fff;
+  padding: 50px 0;
+  margin-top: 50px;
+  margin-bottom: 50px; }
 
 .midia {
   margin: 50px 0; }
@@ -7329,3 +7354,116 @@ ul > li {
   margin: 20px 0 30px 0; }
   .card-planta-list > li {
     margin-bottom: 15px; }
+
+.hero {
+  height: 500px;
+  width: 100%;
+  background: -moz-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: -o-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  background: linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', endColorstr='#53e3af',GradientType=1 );
+  /* IE6-9 fallback on horizontal gradient */
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-align-content: start;
+  -ms-flex-line-pack: start;
+  align-content: start;
+  margin-bottom: 80px;
+  background-size: cover; }
+
+.hero-129 {
+  background-image: url("../img/hero-129.jpg"); }
+
+.hero-info {
+  margin: auto;
+  text-align: center; }
+
+.lead-hero {
+  color: #fff !important; }
+
+.feature-apto {
+  font-size: 16px; }
+
+.banner-wrap {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-align-content: start;
+  -ms-flex-line-pack: start;
+  align-content: start;
+  margin: 50px 0; }
+  .banner-wrap > div {
+    margin: auto; }
+
+.banner {
+  border-radius: 5px; }
+
+.banner-pet {
+  width: 100%;
+  max-width: 625px;
+  height: 306px;
+  padding: 50px 0 0 30px;
+  color: #fff; }
+
+.banner-pet_title {
+  font-size: 22px;
+  font-family: "supermolotbold_italic"; }
+
+.banner-pet_text {
+  display: inline-block;
+  font-family: "supermolotregular";
+  font-size: 20px;
+  margin-top: 10px;
+  width: 100%; }
+  .banner-pet_text > ul {
+    padding: 0; }
+
+.banner-pet_4 {
+  background-image: url("../banners/banners-pet-4.jpg");
+  background-size: cover; }
+
+.galeria-plantas {
+  margin-bottom: 50px; }
+
+.title-group-slider {
+  padding: 90px 0 0 0; }
+
+.galeria {
+  width: 100%;
+  max-width: 1200px;
+  position: relative;
+  margin: 20px auto;
+  text-align: center;
+  -webkit-box-shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15);
+  box-shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15); }
+  @media only screen and (max-width: 1440px) {
+    .galeria {
+      max-width: 950px; } }
+
+.download-plantas {
+  width: 100%;
+  padding: 10px 0;
+  background: -moz-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: -o-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  background: linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', endColorstr='#53e3af',GradientType=1 );
+  /* IE6-9 fallback on horizontal gradient */ }
