--- a/assets/css/style-general.scss
+++ b/assets/css/style-general.scss
@@ -141,6 +141,9 @@ background: -webkit-linear-gradient(45deg, rgb(48,43,108) 0%,rgb(83,227,175) 100
 background: linear-gradient(45deg, rgb(48,43,108) 0%,rgb(83,227,175) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', endColorstr='#53e3af',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
+.bar-color_small {
+	height: 4px;
+}
 
 // BUTTONS
 .btn {
