--- a/assets/css/style-apartamentos.scss
+++ b/assets/css/style-apartamentos.scss
@@ -192,6 +192,9 @@
 		max-width: 950px;
 	}		
 }
+.galeria-plantas {
+	box-shadow: none;
+}
 .slider-ilustra-caption {
 	width: 100%;
 	height: 70px;
@@ -240,6 +243,35 @@
 .nav-next {
 	background: url(../img/arrow-right.svg) no-repeat;
 	float: right;
+}
+
+// 360
+.wrap-360 {
+	border-radius: 5px;
+	box-shadow: $shadow;
+    height: 730px;
+    margin-bottom: 80px;
+}
+.img-360 {
+	height: 600px !important;
+}
+.img-360_caption {
+    position: relative;
+    margin-top: -40px;
+    width: 100%;
+    max-width: 1200px;
+    padding: 30px;
+    height: 100px;
+    background: url(../img/icon-360.png) no-repeat;
+    background-position: 30px 10px;
+    font-size: 16px;
+    color: $grey-medium;
+    text-align: right;
+    font-family: $font-regular;
+}
+.bar-color_360 {
+    margin-top: -75px;
+    position: absolute;
 }
 
 // DOWNLOAD PLANTAS 
