--- a/assets/css/style-contato.css
+++ b/assets/css/style-contato.css
@@ -7272,369 +7272,23 @@ ul > li {
   background: #f5f5f5;
   font-size: 14px; }
 
-.paulo {
-  z-index: 2; }
+.telefone {
+  font-size: 25px;
+  font-family: "supermolotbold_italic";
+  color: #302b6c;
+  display: inline-block; }
 
-.bar-color-depoimento {
-  margin-left: -110px;
-  position: absolute;
-  width: 730px;
-  margin-top: 50px;
-  z-index: 1;
+label {
   font-family: "supermolotregular"; }
 
-.paulo-depoimento {
-  font-size: 20px; }
-
-.paulo-nome {
-  font-family: "supermolotbold_italic"; }
-
-.plantas-small {
-  margin-bottom: 50px; }
-
-.card-planta {
-  max-width: 1250px;
-  width: 100%;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-align-content: start;
-  -ms-flex-line-pack: start;
-  align-content: start;
-  -webkit-box-shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15);
-  box-shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15);
-  border-radius: 5px;
-  overflow: hidden;
-  margin: 50px 0; }
-
-.card-planta-body {
-  padding: 0px 30px; }
-
-.card-planta-info {
-  margin: auto; }
-
-.card-planta-title {
-  font-size: 30px;
-  font-family: "supermolotbold_italic";
-  color: #434244;
-  letter-spacing: 0.5px; }
-
-.card-planta-lead {
-  font-family: "supermolotlight";
-  font-size: 18px;
-  color: #434244;
-  letter-spacing: 0.5px;
-  margin-top: -18px; }
-
-.card-planta-feature {
-  font-size: 22px;
-  font-family: "supermolotbold_italic";
-  color: #434244;
-  -webkit-box-shadow: inset 0px -10px 0px #52dfae;
-  box-shadow: inset 0px -10px 0px #52dfae;
-  margin-bottom: 20px; }
-
-.card-small-title {
-  color: #fff;
-  font-size: 27px;
-  font-family: "supermolotlight";
-  letter-spacing: 0.5px;
-  position: absolute;
-  top: 65px;
-  margin-left: 30px; }
-
-.card-small-title-number {
-  font-size: 80px; }
-
-.card-planta-list {
-  font-size: 20px;
-  list-style-type: none;
-  padding: 0;
-  margin: 20px 0 30px 0; }
-  .card-planta-list > li {
-    margin-bottom: 15px; }
-
-.hero {
-  height: 500px;
-  width: 100%;
-  background: -moz-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
-  /* FF3.6-15 */
-  background: -webkit-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
-  /* Chrome10-25,Safari5.1-6 */
-  background: -o-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
-  background: linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', endColorstr='#53e3af',GradientType=1 );
-  /* IE6-9 fallback on horizontal gradient */
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-align-content: start;
-  -ms-flex-line-pack: start;
-  align-content: start;
-  margin-bottom: 80px;
-  background-size: cover; }
-
-.hero-129 {
-  background-image: url("../img/hero-129.jpg"); }
-
-.hero-101 {
-  background-image: url("../img/hero-101.jpg"); }
-
-.hero-62 {
-  background-image: url("../img/hero-62.jpg"); }
-
-.hero-48 {
-  background-image: url("../img/hero-48.jpg"); }
-
-.hero-info {
-  margin: auto;
-  text-align: center; }
-
-.lead-hero {
-  color: #fff !important; }
-
-.feature-apto {
-  font-size: 16px; }
-
-.banner-wrap {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-align-content: start;
-  -ms-flex-line-pack: start;
-  align-content: start;
-  margin: 50px 0; }
-  .banner-wrap > div {
-    margin: auto; }
-
-.banner {
-  border-radius: 5px; }
-
-.banner-pet {
-  width: 100%;
-  max-width: 625px;
-  height: 306px;
-  padding: 50px 0 0 30px;
-  color: #fff; }
-
-.banner-pet_title {
-  font-size: 22px;
-  font-family: "supermolotbold_italic"; }
-
-.banner-pet_text {
-  display: inline-block;
-  font-family: "supermolotregular";
-  font-size: 20px;
-  margin-top: 10px;
-  width: 100%; }
-  .banner-pet_text > ul {
-    padding: 0; }
-
-.banner-pet_4 {
-  background-image: url("../banners/banners-pet-4.jpg");
-  background-size: cover; }
-
-.banner-pet_3 {
-  background-image: url("../banners/banners-pet-3.jpg");
-  background-size: cover; }
-
-.banner-pet_2 {
-  background-image: url("../banners/banners-pet-2.jpg");
-  background-size: cover; }
-
-.banner-pet_1 {
-  background-image: url("../banners/banners-pet-1.jpg");
-  background-size: cover; }
-
-.galeria-plantas {
-  margin-bottom: 50px; }
-
-.title-group-slider {
-  padding: 90px 0 0 0; }
-
-.galeria {
-  width: 100%;
-  max-width: 1200px;
-  position: relative;
-  margin: 20px auto 80px auto;
-  text-align: center;
-  -webkit-box-shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15);
-  box-shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15); }
-  @media only screen and (max-width: 1440px) {
-    .galeria {
-      max-width: 950px; } }
-
-.galeria-plantas {
-  -webkit-box-shadow: none;
-  box-shadow: none; }
-
-.slider-ilustra-caption {
-  width: 100%;
-  height: 70px;
-  padding-top: 20px;
-  display: inline-block;
-  text-transform: capitalize;
-  font-family: "supermolotregular";
-  color: #434244; }
-
-.swiper-pagination, .swiper-pagination-fraction {
-  border: 2px solid #302b6c;
-  border-radius: 3px;
-  width: 50px !important;
-  left: 50% !important;
-  margin-left: -25px;
-  margin-top: 20px;
-  position: relative; }
-
-.bar-color_slider {
-  position: absolute;
-  bottom: 86px; }
-
-.nav-arrow {
-  width: 100%;
-  padding: 0 30px;
-  height: 40px;
-  position: absolute;
-  top: 45%;
-  z-index: 999; }
-
-.nav-icon {
-  display: inline-block;
-  width: 20px;
-  height: 35px; }
-
-.nav-prev, .nav-next {
-  cursor: pointer; }
-
-.nav-prev {
-  background: url(../img/arrow-left.svg) no-repeat;
-  float: left; }
-
-.nav-next {
-  background: url(../img/arrow-right.svg) no-repeat;
-  float: right; }
-
-.wrap-360 {
-  border-radius: 5px;
-  -webkit-box-shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15);
-  box-shadow: 2px 2px 12px 3px rgba(48, 43, 108, 0.15);
-  height: 730px;
-  margin-bottom: 80px; }
-
-.img-360 {
-  height: 600px !important; }
-
-.img-360_caption {
-  position: relative;
-  margin-top: -40px;
-  width: 100%;
-  max-width: 1200px;
-  padding: 30px;
-  height: 100px;
-  background: url(../img/icon-360.png) no-repeat;
-  background-position: 30px 10px;
-  font-size: 16px;
-  color: #434244;
-  text-align: right;
-  font-family: "supermolotregular"; }
-
-.bar-color_360 {
-  margin-top: -75px;
-  position: absolute; }
-
-.download-plantas {
-  padding: 20px 0;
-  background: -moz-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
-  /* FF3.6-15 */
-  background: -webkit-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
-  /* Chrome10-25,Safari5.1-6 */
-  background: -o-linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
-  background: linear-gradient(45deg, #302b6c 0%, #53e3af 100%);
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', endColorstr='#53e3af',GradientType=1 );
-  /* IE6-9 fallback on horizontal gradient */
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center; }
-
-.download-plantas-wrap {
-  width: 100%;
-  max-width: 980px; }
-
-.icon-download, .download-info, .download-form {
-  float: left;
-  color: #fff; }
-
-.download-info {
-  display: inline-block;
-  margin-left: 30px; }
-  .download-info > span {
-    color: #53e3af;
-    font-family: "supermolotregular";
-    text-transform: uppercase; }
-
-.form-down-input {
-  float: left;
-  margin-left: 15px; }
-  .form-down-input > label {
-    font-family: "supermolotregular";
-    letter-spacing: 0.3px;
-    display: inline-block; }
-  .form-down-input > input {
-    height: 40px;
-    border: none;
-    border-radius: 3px;
-    padding: 5px 10px;
-    margin-top: -2px; }
-
-.btn-download {
-  margin-top: 30px;
-  margin-left: 10px;
-  cursor: pointer; }
-
-.decorado {
-  background: #302b6c;
-  padding-bottom: 50px;
-  margin-bottom: 80px; }
-
-.decorado-title {
-  color: #fff;
-  font-family: "supermolotbold_italic"; }
-
-.lead-decorado, .decorado-info, .decorado-endereco {
-  color: #fff !important;
-  letter-spacing: 0.3px;
-  font-family: "supermolotregular"; }
-
-.decorado-agendar {
-  color: #53e3af;
-  font-size: 22px;
-  font-family: "supermolotbold_italic";
+.projeto {
   margin-top: 50px; }
 
-.decorado-endereco {
-  border-left: 2px solid #53e3af;
-  padding-left: 10px;
-  display: inline-block;
-  margin-top: 15px; }
+.projeto-title {
+  font-size: 30px;
+  text-transform: uppercase;
+  font-family: "supermolotlight"; }
+
+.projeto-text {
+  font-size: 18px;
+  margin-bottom: 20px; }
