--- a/assets/css/style-general.scss
+++ b/assets/css/style-general.scss
@@ -155,6 +155,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#302b6c', end
 	color: $white;
 	border: 2px solid $color-primary;
 	letter-spacing: 0.5px;
+	cursor: pointer;
 	&:hover {
 	background: $white;
 	color: $color-primary;
