--- a/assets/css/style-lazer.css
+++ b/assets/css/style-lazer.css
@@ -6970,6 +6970,10 @@ h1, .h1 {
   color: #e1e1e1;
   text-transform: uppercase;
   letter-spacing: 5px; }
+  @media only screen and (max-width: 425px) {
+    h1, .h1 {
+      font-size: 25px;
+      letter-spacing: 3px; } }
 
 h2, .h2 {
   font-family: "supermolotlight";
@@ -6981,8 +6985,16 @@ h2, .h2 {
 p {
   font-family: "supermolotregular"; }
 
+.text {
+  margin-top: 50px; }
+
 ul > li {
-  list-style-type: none; }
+  list-style-type: none;
+  font-family: "supermolotregular";
+  font-size: 16px; }
+  @media only screen and (max-width: 425px) {
+    ul > li {
+      font-size: 15px; } }
 
 p.lead {
   font-family: "supermolotlight";
@@ -6990,16 +7002,16 @@ p.lead {
   text-transform: uppercase;
   color: #434244;
   letter-spacing: 3px; }
+  @media only screen and (max-width: 425px) {
+    p.lead {
+      font-size: 18px;
+      letter-spacing: 2px; } }
 
 p.text-spot {
   font-family: "supermolotlight";
   font-size: 20px;
   color: #434244;
   letter-spacing: 0.5px; }
-
-ul > li {
-  font-family: "supermolotregular";
-  font-size: 16px; }
 
 .title-group {
   text-align: center;
@@ -7065,22 +7077,30 @@ ul > li {
   font-family: "supermolotregular"; }
 
 .btn-cta {
-  background: #302b6c;
   color: #fff;
   border: 2px solid #302b6c;
   letter-spacing: 0.5px;
-  cursor: pointer; }
+  cursor: pointer;
+  padding-right: 50px;
+  background: #302b6c url("../img/arrow-btn.svg") no-repeat;
+  background-position: 100%; }
   .btn-cta:hover {
     background: #fff;
-    color: #302b6c; }
+    color: #302b6c;
+    background: #fff url("../img/arrow-btn-hover.svg") no-repeat;
+    background-position: 100%; }
 
 .btn-inverse {
   background: #fff;
   color: #302b6c;
-  border: 2px solid #fff; }
+  border: 2px solid #fff;
+  padding-right: 50px;
+  background: #fff url("../img/arrow-btn-hover.svg") no-repeat;
+  background-position: 100%; }
   .btn-inverse:hover {
-    background: none;
-    color: #fff; }
+    color: #fff;
+    background: transparent url("../img/arrow-btn.svg") no-repeat;
+    background-position: 100%; }
 
 .blue-line {
   width: 100%;
@@ -7146,6 +7166,10 @@ ul > li {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center; }
+  @media only screen and (max-width: 425px) {
+    .feature {
+      width: 150px;
+      font-size: 18px; } }
 
 .ficha-tecnica {
   background: #302b6c;
@@ -7171,6 +7195,10 @@ ul > li {
 
 #youtubecover:hover {
   cursor: pointer; }
+
+@media only screen and (max-width: 425px) {
+  .cards {
+    margin-bottom: 20px; } }
 
 .card-block {
   width: 100%;
@@ -7231,11 +7259,22 @@ ul > li {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center; }
+  @media only screen and (max-width: 425px) {
+    .cta-stand {
+      display: inline-block;
+      width: 90%;
+      margin-left: 1%; } }
 
 .stand-text {
   width: 300px;
   height: 200px;
   margin-left: 50px; }
+  @media only screen and (max-width: 425px) {
+    .stand-text {
+      margin-left: 5%;
+      height: auto;
+      padding: 50px 0;
+      text-align: center; } }
 
 .cta-stand-title {
   font-family: "supermolotlight";
@@ -7271,9 +7310,6 @@ ul > li {
   padding: 20px 100px;
   background: #f5f5f5;
   font-size: 14px; }
-
-.text-lazer {
-  margin: 50px 0; }
 
 .lazer-wrap {
   margin-top: 20px; }
@@ -7357,18 +7393,17 @@ ul > li {
 
 .lazer-exclusivo {
   width: 100%;
-  background: #302b6c;
   padding: 50px 20px;
   margin: 50px 0 50px 0; }
 
 .lazer-exclusivo_title {
   font-family: "supermolotbold_italic";
   font-size: 35px;
-  color: #53e3af;
+  color: #302b6c;
   margin-bottom: 30px; }
 
 .lazer-destaque {
-  color: #fff;
+  color: #302b6c;
   font-size: 16px;
   font-family: "supermolotregular";
   padding: 10px;
@@ -7399,7 +7434,6 @@ ul > li {
   margin: 50px 0; }
 
 .map-container {
-  width: 100%;
   padding: 50px 0;
   background: #302b6c;
   margin-top: 80px;
